snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/error-0.1.1-20210823.154613-2.pom.sha1
bb17c151acfef2ba9cf2c90ad110d3acbe50a500